hls4ml_tutorial/model_1/hls4ml_prj/myproject_prj/solution1/csim/report/myproject_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../myproject_test.cpp in debug mode
   Compiling ../../../../firmware/myproject.cpp in debug mode
In file included from ../../../../firmware/nnet_utils/nnet_transformer.h:10:0,
                 from ../../../../firmware/parameters.h:16,
                 from ../../../../firmware/myproject.cpp:22:
../../../../firmware/nnet_utils/nnet_self_attention.h: In instantiation of ‘void nnet::self_attention(data_T*, res_T*, typename CONFIG_T::inv_sqrt_d_k_t, typename CONFIG_T::norm_weight_t*, typename CONFIG_T::norm_bias_t*, typename CONFIG_T::norm_weight_t*, typename CONFIG_T::norm_bias_t*, typename CONFIG_T::QKV_weight_t*, typename CONFIG_T::dense_weight_t*, typename CONFIG_T::dense_bias_t*) [with data_T = ap_fixed<64, 32>; res_T = ap_fixed<64, 32>; CONFIG_T = self_attention_config0; NORM_CONFIG_T = sa_norm_config0; DENSE0_CONFIG_T = sa_dense_config0; SA_TRANSPOSE0_CONFIG_T = sa_transpose_config0; DENSE1_CONFIG_T = sa_dense_config1; SOFTMAX_CONFIG_T = sa_softmax_config0; DENSE2_CONFIG_T = sa_dense_config2; DENSE3_CONFIG_T = sa_dense_config3; typename CONFIG_T::inv_sqrt_d_k_t = ap_fixed<64, 32>; typename CONFIG_T::norm_weight_t = ap_fixed<64, 32>; typename CONFIG_T::norm_bias_t = ap_fixed<64, 32>; typename CONFIG_T::QKV_weight_t = ap_fixed<64, 32>; typename CONFIG_T::dense_weight_t = ap_fixed<64, 32>; typename CONFIG_T::dense_bias_t = ap_fixed<64, 32>]’:
../../../../firmware/nnet_utils/nnet_transformer.h:115:191:   required from ‘void nnet::transformer(data_T*, res_T*, typename SA_CONFIG_T::inv_sqrt_d_k_t, typename CONFIG_T::SA_norm_weight_t*, typename CONFIG_T::SA_norm_bias_t*, typename CONFIG_T::SA_norm_weight_t*, typename CONFIG_T::SA_norm_bias_t*, typename CONFIG_T::SA_QKV_weight_t*, typename CONFIG_T::SA_dense_weight_t*, typename CONFIG_T::SA_dense_bias_t*, typename CONFIG_T::norm0_weight_t*, typename CONFIG_T::norm0_bias_t*, typename CONFIG_T::dense0_weight_t*, typename CONFIG_T::norm1_weight_t*, typename CONFIG_T::norm1_bias_t*, typename CONFIG_T::dense1_weight_t*) [with data_T = ap_fixed<64, 32>; res_T = ap_fixed<64, 32>; CONFIG_T = transformer_config0; SA_CONFIG_T = self_attention_config0; SA_NORM_CONFIG_T = sa_norm_config0; SA_DENSE0_CONFIG_T = sa_dense_config0; SA_TRANSPOSE0_CONFIG_T = sa_transpose_config0; SA_DENSE1_CONFIG_T = sa_dense_config1; SA_SOFTMAX_CONFIG_T = sa_softmax_config0; SA_DENSE2_CONFIG_T = sa_dense_config2; SA_DENSE3_CONFIG_T = sa_dense_config3; NORM0_CONFIG_T = normalize_config1; SIG0_CONFIG_T = sigmoid_config0; DENSE0_CONFIG_T = transformer_dense_config0; NORM1_CONFIG_T = normalize_config2; SIG1_CONFIG_T = sigmoid_config1; DENSE1_CONFIG_T = transformer_dense_config1; typename SA_CONFIG_T::inv_sqrt_d_k_t = ap_fixed<64, 32>; typename CONFIG_T::SA_norm_weight_t = ap_fixed<64, 32>; typename CONFIG_T::SA_norm_bias_t = ap_fixed<64, 32>; typename CONFIG_T::SA_QKV_weight_t = ap_fixed<64, 32>; typename CONFIG_T::SA_dense_weight_t = ap_fixed<64, 32>; typename CONFIG_T::SA_dense_bias_t = ap_fixed<64, 32>; typename CONFIG_T::norm0_weight_t = ap_fixed<64, 32>; typename CONFIG_T::norm0_bias_t = ap_fixed<64, 32>; typename CONFIG_T::dense0_weight_t = ap_fixed<64, 32>; typename CONFIG_T::norm1_weight_t = ap_fixed<64, 32>; typename CONFIG_T::norm1_bias_t = ap_fixed<64, 32>; typename CONFIG_T::dense1_weight_t = ap_fixed<64, 32>]’
../../../../firmware/myproject.cpp:144:5:   required from here
../../../../firmware/nnet_utils/nnet_self_attention.h:187:43: error: no matching function for call to ‘dense(ap_fixed<64, 32> [2][2][2], ap_fixed<64, 32> [256], ap_fixed<64, 32> [2][128], ap_fixed<64, 32> [256])’
     dense<data_T, data_T, DENSE2_CONFIG_T>(attention, scaled_attention, values, zero_bias2);
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../../../../firmware/parameters.h:12:0,
                 from ../../../../firmware/myproject.cpp:22:
../../../../firmware/nnet_utils/nnet_dense.h:38:6: note: candidate: template<class data_T, class res_T, class CONFIG_T> void nnet::dense(data_T*, res_T*, typename CONFIG_T::weight_t*, typename CONFIG_T::bias_t*)
 void dense(
      ^~~~~
../../../../firmware/nnet_utils/nnet_dense.h:38:6: note:   template argument deduction/substitution failed:
In file included from ../../../../firmware/nnet_utils/nnet_transformer.h:10:0,
                 from ../../../../firmware/parameters.h:16,
                 from ../../../../firmware/myproject.cpp:22:
../../../../firmware/nnet_utils/nnet_self_attention.h:187:43: note:   cannot convert ‘attention’ (type ‘ap_fixed<64, 32> [2][2][2]’) to type ‘ap_fixed<64, 32>*’
     dense<data_T, data_T, DENSE2_CONFIG_T>(attention, scaled_attention, values, zero_bias2);
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../../../../firmware/parameters.h:14:0,
                 from ../../../../firmware/myproject.cpp:22:
../../../../firmware/nnet_utils/nnet_dense_stream.h:29:6: note: candidate: template<class data_T, class res_T, class CONFIG_T> void nnet::dense(hls::stream<srcType>&, hls::stream<dstType>&, typename CONFIG_T::weight_t*, typename CONFIG_T::bias_t*)
 void dense(
      ^~~~~
../../../../firmware/nnet_utils/nnet_dense_stream.h:29:6: note:   template argument deduction/substitution failed:
In file included from ../../../../firmware/nnet_utils/nnet_transformer.h:10:0,
                 from ../../../../firmware/parameters.h:16,
                 from ../../../../firmware/myproject.cpp:22:
../../../../firmware/nnet_utils/nnet_self_attention.h:187:43: note:   cannot convert ‘attention’ (type ‘ap_fixed<64, 32> [2][2][2]’) to type ‘hls::stream<ap_fixed<64, 32> >&’
     dense<data_T, data_T, DENSE2_CONFIG_T>(attention, scaled_attention, values, zero_bias2);
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [obj/myproject.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
